<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaludo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNombre"
            android:textSize="@dimen/tiSize" />




    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/dpFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre"
        android:calendarViewShown="false"></DatePicker>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpFechaNacimiento">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTelefono"
            android:textSize="@dimen/tiSize" >

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTelefono">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:textSize="@dimen/tiSize">
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDescripción"
            android:textSize="@dimen/tiSize">
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgBoton"
        app:layout_constraintTop_toBottomOf="@+id/tilDescripcion"/>

</android.support.constraint.ConstraintLayout>